hdparm-9.44:
	- changed reg_flags struct to more closely match kernel definition (Lucas Magasweran).
	- added fwdownload mode "E" support (Rusty Carruth).
	- fix timeouts for security-erase (again!)
	- change display of security "supported" to handle ambiguous reporting from drives
	- don't rely upon C-library for byte-swapping
	- added --dco-setmax support, courtesy of Geoff Papilion.
hdparm-9.43
	- rearrange flag execution so that the idle/standby/sleep "now" flags are executed last.
hdparm-9.42
	- fix ordering of -S -y flags
	- spelling, typo, and formatting fixes for manpage and others
	- set block-count to 1 for Security commands sent via SAT (sgio)
	- use FIGETBSZ to determine filesystem block size for fibmap -- needed for FAT
	- fix master password revcode handling
	- try and fix reg_flags (again!) for old IDE taskfile ioctls
	- fixed '&&' bug in dco_identify code
	- force sector dumps (read-sector, identify, ..) to use le16 output format
hdparm-9.41
	- proper SCT identify info courtesy of Leonid Evdokimov <leon@darkk.net.ru>
	- updated raid1ext4trim.sh-1.5 script
hdparm-9.40
	- avoid HDIO_GETGEO_BIG when possible (doesn't exist in linux-2.6.xx and beyond)
	- pad secure erase timeouts by 30minutes rather than 5minutes.
hdparm-9.39
	- added -R flag to control Read-Write-Verify feature, courtesy of Gordan Bobic
	- nuked leftover sgio.c.orig file
hdparm-9.38
	- updated wiper.sh to allow all SCSI_DISK major numbers
	- updated handing for very long SECURITY-ERASE times
	- added -J flag for wdidle3 set/get
hdparm-9.37
	- handle raid1 start_lba values, and show -1 for indeterminte raid start_lba values
	- abort --fibmap when start_lba is indeterminate
	- updated wiper.sh to fix a kink with hfsplus filesystems
	- updated wiper.sh to no longer rely on the obsolete "rdev" command
hdparm-9.36
	- udpated raid1ext4trim.sh script to version 1.4
	- updated wiper.sh to support hfsplus and ntfs filesystem types, courtesy of Heiko Wegeler