@@ -1,4 +1,4 @@
-.TH HDPARM 8 "September 2014" "Version 9.44"
+.TH HDPARM 8 "September 2014" "Version 9.45"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
